--- a/cheatsheet/cheatsheet.tex
+++ b/cheatsheet/cheatsheet.tex
@@ -1,7 +1,7 @@
 \documentclass[papersize=a4,paper=landscape,11pt]{scrartcl}
 
 \usepackage[top=1cm, bottom=2.5cm, left=1cm, right=1cm]{geometry}
- 
+
 \usepackage[default]{sourcesanspro}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -222,7 +222,7 @@ Use arithmetic operators for numerical calculations.
 
 
 \subsection*{IOUtils Package}
-You can find a pre-built package at \url{https://goo.gl/VcVasP}.
+You can find a pre-built package at \url{https://bit.ly/2M2XXHH}.
 The source code is at \url{https://github.com/telematik-tu-ilmenau/AuPUtils}.
 
 \begin{lstlisting}
@@ -241,7 +241,7 @@ int r = (int)(Math.random() * 5 + 1);
 \end{lstlisting}
 Java also ships a separate class for generating random numbers.
 \begin{lstlisting}
-Random rand = new Random(); 
+Random rand = new Random();
 int r = rand.nextInt(5);
 \end{lstlisting}
 
@@ -260,7 +260,7 @@ int r = rand.nextInt(5);
 	\evenRow Math.exp(x) & $e^x$\\
 	\oddRow Math.pow(x,y) & $x^y$\\
 	\evenRow Math.floor(x) & $\lfloor x \rfloor$\\
-	\oddRow Math.ceil(x) & $\lceil x \rceil$ 
+	\oddRow Math.ceil(x) & $\lceil x \rceil$
 \end{tabularx}
 
 \subsubsection*{Java Documentation}
