change ++i to i++ on cheatsheet

--- a/cheatsheet/cheatsheet.tex
+++ b/cheatsheet/cheatsheet.tex
@@ -135,7 +135,7 @@ switch(variable) {
 \subsection*{Loop Statements}
 Below you can find examples of different loop statements, each printing the numbers 0 to 9.
 \begin{lstlisting}
-for(int i = 0; i < 10; ++i) {
+for(int i = 0; i < 10; i++) {
   System.out.println("Number " + i);
 }
 \end{lstlisting}
