fix decrement operator

--- a/cheatsheet/cheatsheet.tex
+++ b/cheatsheet/cheatsheet.tex
@@ -186,7 +186,7 @@ Use arithmetic operators for numerical calculations.
 	\evenRow / & Division\\
 	\oddRow \% & Division Remainder (Modulus)\\
 	\evenRow ++ & Increment\\
-	\oddRow -- & Decrement\\
+    \oddRow -{}- & Decrement\\
 \end{tabularx}
 
 \subsection*{Relational Operators}
