--- a/cheatsheet/cheatsheet.tex
+++ b/cheatsheet/cheatsheet.tex
@@ -249,7 +249,7 @@ int r = rand.nextInt(5);
 \begin{tabularx}{\columnwidth}{lX}
 	\tableHeaderTwo{Method}{Explanation}\\
 	\oddRow Math.abs(x) & |x|\\
-	\evenRow Math.asin() & $\sin^{-1}$\\
+    \evenRow Math.asin(x) & $\sin^{-1}(x)$\\
 	\oddRow Math.acos(x) & $\cos^{-1}(x)$\\
 	\evenRow Math.atan(x) & $\tan^{-1}(x)$\\
 	\oddRow Math.sin(x) & $\sin(x)$\\
