--- a/cheatsheet/cheatsheet.tex
+++ b/cheatsheet/cheatsheet.tex
@@ -7,13 +7,16 @@
 \usepackage[T1]{fontenc}
 \usepackage{lipsum}
 \usepackage{multicol}
-
 \usepackage{tabularx}
 
 \usepackage[table]{xcolor}
 \definecolor{Primary}{HTML}{6200EE}
 \definecolor{Gray}{gray}{0.85}
 \definecolor{LightPrimary}{gray}{0.95}
+
+\usepackage{tikz}
+\usetikzlibrary{arrows,positioning}
+
 
 \newcommand{\tableHeaderThree}[3]{\rowcolor{Primary} \leavevmode\color{white}{\bfseries #1} & \leavevmode\color{white}{\bfseries #2} & \leavevmode\color{white}{\bfseries #3}}
 \newcommand{\tableHeaderTwo}[2]{\rowcolor{Primary} \leavevmode\color{white}{\bfseries #1} & \leavevmode\color{white}{\bfseries #2}}
@@ -155,6 +158,27 @@ do {
   i++;
 } while(i < 10);
 \end{lstlisting}
+
+\subsubsection*{Break and Continue}
+Break/continue can be used to jump directly to the end/beginning of the innerst loops.
+
+\begin{lstlisting}[escapechar = !]
+
+for(int i = 0; i < 10; i++) {
+  if(i <= 5) {
+    continue;!\tikz[remember picture] \node [] (b) {};!
+  } else {
+    break;!\tikz[remember picture] \node [] (c) {};!
+  }
+}
+...
+\end{lstlisting}
+\begin{tikzpicture}[remember picture, overlay]
+  \draw [->,>=stealth] (b) -- ++(5,0) -- ++ (0,1.46) -- ++(-8,0) -- ++(0,-0.3);
+  \draw [->,>=stealth] (c) -- ++(3,0) -- ++ (0,-1.3) -- ++(-4.5,0);
+\end{tikzpicture}
+%\path[->]<2-> (c) edge [bend right] (d);
+%\path[->]<3-> (n3) edge [out=0, in=-90] (t3);
 
 \subsection*{Methods}
 Use methods to repeatedly use identical code.
