--- a/cheatsheet/cheatsheet.tex
+++ b/cheatsheet/cheatsheet.tex
@@ -87,15 +87,19 @@ i = j + 27;
 \subsection*{Arrays}
     Use arrays to group multiple identically typed values together. Index range goes from  0 to length - 1.
 \begin{lstlisting}
-int[] myArray = new int[10];
-myArray[2] = 5;
+// Create 1D array with 10 elements
+// and write 5 into third (!!!) cell
+int[] array1 = new int[10];
+array1[2] = 5;
 
-// a 2D array or matrix
-int[][] intArray = new int[10][20];
+// Create 1D array with elements
+int[] array1 = { 1, 2, 3 };
 
-// a 3D array
-int[][][] intArray = null;
-intArray = new int[10][20][10];
+// Create a 2D array or matrix
+int[][] array2 = new int[10][20];
+
+// Create a 3D array
+int[][][] array3 = new int[5][6][7];
 \end{lstlisting}
 
 \subsubsection*{Length/Size of Arrays and Strings}
@@ -143,6 +147,7 @@ for(int i = 0; i < 10; i++) {
 }
 \end{lstlisting}
 
+
 \begin{lstlisting}
 int i = 0;
 while(i < 10) {
@@ -151,13 +156,13 @@ while(i < 10) {
 }
 \end{lstlisting}
 
-\begin{lstlisting}
-int i = 0;
-do {
-  System.out.println("Number " + i);
-  i++;
-} while(i < 10);
-\end{lstlisting}
+%\begin{lstlisting}
+%int i = 0;
+%do {
+%  System.out.println("Number " + i);
+%  i++;
+%} while(i < 10);
+%\end{lstlisting}
 
 \subsubsection*{Break and Continue}
 Break/continue can be used to jump directly to the end/beginning of the innerst loops.
@@ -232,17 +237,17 @@ Use arithmetic operators for numerical calculations.
 	\oddRow ! & NOT\\
 \end{tabularx}
 
-\subsection*{Bitwise Operators}
-\begin{tabularx}{\columnwidth}{lX}
-	\tableHeaderTwo{Operator}{Explanation}\\
-	\oddRow \& & AND\\
-	\evenRow | & OR\\
-	\oddRow \textasciicircum & XOR\\
-	\evenRow \textasciitilde & NOT\\
-	\oddRow \textgreater{}\textgreater & shift right\\
-	\evenRow \textless{}\textless & shift left\\
-	\oddRow >{}>{}> & shift right zero fill\\
-\end{tabularx}
+%\subsection*{Bitwise Operators}
+%\begin{tabularx}{\columnwidth}{lX}
+%	\tableHeaderTwo{Operator}{Explanation}\\
+%	\oddRow \& & AND\\
+%	\evenRow | & OR\\
+%	\oddRow \textasciicircum & XOR\\
+%	\evenRow \textasciitilde & NOT\\
+%	\oddRow \textgreater{}\textgreater & shift right\\
+%	\evenRow \textless{}\textless & shift left\\
+%	\oddRow >{}>{}> & shift right zero fill\\
+%\end{tabularx}
 
 
 \subsection*{IOUtils Package}
